--- a/NativeWar/WarGame.vcxproj.filters
+++ b/NativeWar/WarGame.vcxproj.filters
@@ -4,16 +4,11 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Card.h" />
-    <ClInclude Include="Casino.h" />
-    <ClInclude Include="Deck.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Casino.cpp" />
-    <ClCompile Include="Deck.cpp" />
-    <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="WarGame.cpp" />
   </ItemGroup>
 </Project>
